<resources>
    <string name="app_name">City View</string>
    <string name="image_desc">Tour por Rarotonga - Reserva online en Civitatis.com</string>
    <string name="city_title"><u>Nombre:</u></string>
    <string name="city">Rarotonga</string>
    <string name="information_title"><u>Información General:</u></string>
    <string name="information">Rarotonga es una pequeña isla volcánica en el Pacífico Sur, es la más grande y poblada del archipiélago de las islas Cook, en la cual se encuentra su capital Avarua con 13373 habitantes (último censo el 1 de julio del 2021)</string>
    <string name="location_title"><u>Ubicación:</u></string>
    <string name="location">21°14′00″S 159°47′00″O</string>
    <string name="temperature_title"><u>Temperatura:</u></string>
    <string name="temperature">24°C</string>
    <string name="poi_title"><u>Puntos de Interés:</u></string>
    <string name="poi">-Laguna Muri\r\n-Reserva Marina Aroa\r\n-Museo Cultural Te Ara\r\n-Jardín Botánico Maire Nui\r\n-Cascada Papua\n\n</string>
    <string name="image2_desc">Barra mint</string>
    <string name="rarotonga">Isla de Rarotonga</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="notifications_title">Enable Notifications</string>
    <string name="notifications_header">notifications_header</string>
    <string name="label_list">POI List - 15</string>
    <string name="label_detail">POI Detail - 15</string>
    <string name="menu_settings_title">Settings</string>
    <string name="temperature_label">Temperature:</string>
    <string name="population_label">Population:</string>
    <string name="location_label">Location:</string>
    <string name="score_label">Score:</string>
</resources>