<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/generalFragment">

    <fragment
        android:id="@+id/detailFragment"
        android:name="com.kirilcorp.cityview.DetailFragment"
        android:label="@string/information_title"
        tools:layout="@layout/fragment_detail" />
    <fragment
        android:id="@+id/generalFragment"
        android:name="com.kirilcorp.cityview.GeneralFragment"
        android:label="@string/city"
        tools:layout="@layout/fragment_general" >
        <action
            android:id="@+id/action_generalFragment_to_recyclerFragment"
            app:destination="@id/recyclerFragment" />
    </fragment>
    <fragment
        android:id="@+id/preferenceFragment"
        android:name="com.kirilcorp.cityview.PreferenceFragment"
        android:label="@string/preference_header" />
    <fragment
        android:id="@+id/recyclerFragment"
        android:name="com.kirilcorp.cityview.RecyclerFragment"
        android:label="@string/poi_title"
        tools:layout="@layout/fragment_recycler" >
        <action
            android:id="@+id/action_recyclerFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>
</navigation>
